# BibTeX-Citation-Auto-Formatter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sync-citations.yml
src/citesync/: __init__.py  __main__.py  cli.py  dedup.py  models.py
src/citesync/fetchers/: __init__.py  base.py  orcid.py  scholar.py
src/citesync/formatters/: __init__.py  bibtex.py  markdown.py
tests/: test_bibtex_formatter.py  test_cli.py  test_dedup.py  test_markdown_formatter.py  test_orcid_fetcher.py
tests/fixtures/: orcid_works_bulk.json  orcid_works_summary.json
